--- a/application/app/build.gradle
+++ b/application/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "net.penguincoders.doit"
+        applicationId "com.cs465.islesoflife"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
