--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name="com.cs465.islesoflife.SingleIsland">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.cs465.islesoflife.IslandDetail" />
         <activity android:name="com.cs465.islesoflife.SplashActivity">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
