get tasks based on island

--- a/application/app/src/main/AndroidManifest.xml
+++ b/application/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         <activity android:name="com.cs465.islesoflife.IslandDetail" />
         <activity android:name="com.cs465.islesoflife.SplashActivity"/>
         <activity android:name="com.cs465.islesoflife.DailyTaskActivity" />
+        <activity android:name="com.cs465.islesoflife.IslandTasksActivity" />
         <activity android:name="com.cs465.islesoflife.AddNewIsland" />
         <activity android:name="com.cs465.islesoflife.CalendarViewActivity" />
         <activity android:name="com.cs465.islesoflife.Homepage" >
